--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
               <p>+7 (495) 000 52 52</p>
             </a>
           </div>
-          <a class="main-header__button button" type="button" data-open-modal="feedback">Заказать звонок</a>
+          <a class="main-header__button button" data-open-modal="feedback">Заказать звонок</a>
         </div>
       </header>
       <main>
