--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           <div class="main-header__logo logo">
             <a class="logo__link">
               <svg width="55" height="55" aria-label="Логотип.">
-                <use xlink:href="img/sprite_auto.svg#logo"></use>
+                <use xlink:href="./img/sprite_auto.svg#logo"></use>
               </svg>
               <p class="logo__inner">
                 <span class="logo__text logo__text--big">Smart Device</span>
@@ -29,13 +29,13 @@
           <div class="main-header__contacts">
             <a class="main-header__contacts-link" href="#" tabindex="1">
               <svg width="20" height="20" aria-label="Электронная почта.">
-                <use xlink:href="img/sprite_auto.svg#email"></use>
+                <use xlink:href="./img/sprite_auto.svg#email"></use>
               </svg>
               <p>info@sd.ru</p>
             </a>
             <a class="main-header__contacts-link" href="tel:+74950005252" tabindex="2">
               <svg width="20" height="20" aria-label="Телефон.">
-                <use xlink:href="img/sprite_auto.svg#phone-call"></use>
+                <use xlink:href="./img/sprite_auto.svg#phone-call"></use>
               </svg>
               <p>+7 (495) 000 52 52</p>
             </a>
@@ -67,7 +67,7 @@
             </li>
             <li class="featuries__item">
               <svg width="35" height="35" aria-label="Поставщики.">
-                <use xlink:href="img/sprite_auto.svg#hired"></use>
+                <use xlink:href="./img/sprite_auto.svg#hired"></use>
               </svg>
               <h3 class="featuries__title">Крупные поставщики</h3>
               <p class="featuries__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее&nbsp;качество нашей продукции.
@@ -75,7 +75,7 @@
             </li>
             <li class="featuries__item featuries__item--confed">
               <svg width="35" height="35" aria-label="Конфиденциальность.">
-                <use xlink:href="img/sprite_auto.svg#detective"></use>
+                <use xlink:href="./img/sprite_auto.svg#detective"></use>
               </svg>
               <h3 class="featuries__title">Полная конфиденциальность</h3>
               <p class="featuries__text">По желанию клиента  мы обеспечиваем полную конфиденциальность.
@@ -83,7 +83,7 @@
             </li>
             <li class="featuries__item featuries__item--price">
               <svg width="35" height="35" aria-label="Стоимость.">
-                <use xlink:href="img/sprite_auto.svg#tag"></use>
+                <use xlink:href="./img/sprite_auto.svg#tag"></use>
               </svg>
               <h3 class="featuries__title">Персонализация стоимости</h3>
               <p class="featuries__text">Мы подбираем определенную&nbsp;фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.
@@ -180,7 +180,7 @@
             <div class="main-footer__logo logo">
               <a class="logo__link logo__link--footer">
                 <svg width="55" height="55" aria-label="Логотип.">
-                  <use xlink:href="img/sprite_auto.svg#logo"></use>
+                  <use xlink:href="./img/sprite_auto.svg#logo"></use>
                 </svg>
                 <p class="logo__inner logo__inner--footer">
                   <span class="logo__text logo__text--big">Smart Device</span>
@@ -193,21 +193,21 @@
                 <li class="main-footer__socials-item">
                   <a href="#" aria-label="OK.">
                     <svg width="30" height="30">
-                      <use xlink:href="img/sprite_auto.svg#ok"></use>
+                      <use xlink:href="./img/sprite_auto.svg#ok"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="main-footer__socials-item">
                   <a href="#" aria-label="VK.">
                     <svg width="30" height="30">
-                      <use xlink:href="img/sprite_auto.svg#vk"></use>
+                      <use xlink:href="./img/sprite_auto.svg#vk"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="main-footer__socials-item">
                   <a href="#" aria-label="Pinterest.">
                     <svg width="30" height="30">
-                      <use xlink:href="img/sprite_auto.svg#pinterest"></use>
+                      <use xlink:href="./img/sprite_auto.svg#pinterest"></use>
                     </svg>
                   </a>
                 </li>
