--- a/source/index.html
+++ b/source/index.html
@@ -18,10 +18,10 @@
           <div class="main-header__logo">
             <a class="logo">
               <svg class="logo__desktop" width="215" height="55" aria-label="Логотип.">
-                <use xlink:href="/img/sprite_auto.svg#logo-desktop"></use>
+                <use xlink:href="./img/sprite_auto.svg#logo-desktop"></use>
               </svg>
               <svg class="logo__mobile" width="35" height="35" aria-label="Логотип.">
-                <use xlink:href="/img/sprite_auto.svg#logo-mobile"></use>
+                <use xlink:href="./img/sprite_auto.svg#logo-mobile"></use>
               </svg>
             </a>
           </div>
@@ -47,7 +47,7 @@
           <div class="intro__wrapper container">
             <h1>Печатные платы</h1>
             <p>производство и монтаж, поставка комплектующих, блоков и модулей</p>
-            <a class="intro__link button" href="#feedback" tabindex="4">
+            <a class="intro__link button" href="#feedback" tabindex="4" data-intro-button>
               <span class="intro__text">Получить бесплатную консультацию</span>
               <span class="intro__text intro__text--mobile">Бесплатная консультация</span>
             </a>
@@ -58,7 +58,7 @@
           <ul class="featuries__list">
             <li class="featuries__item">
               <svg width="35" height="35" aria-label="Скорость.">
-                <use xlink:href="img/sprite_auto.svg#stopwatch"></use>
+                <use xlink:href="./img/sprite_auto.svg#stopwatch"></use>
               </svg>
               <h3 class="featuries__title">Оперативные сроки</h3>
               <p class="featuries__text">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и&nbsp;доставлять заказы плат и&nbsp;комплектующих в&nbsp;самые короткие сроки
@@ -115,8 +115,8 @@
               <li class="services__item">
                 <a class="services__link" href="#" tabindex="6">
                   <picture>
-                    <source srcset="img/intro.webp 1x, img/intro@2x.webp 2x" type="image/webp">
-                    <img src="img/intro.jpg" srcset="img/intro@2x.jpg 2x" alt="Производство" width="1494" height="818">
+                    <source srcset="./img/intro.webp 1x, ./img/intro@2x.webp 2x" type="image/webp">
+                    <img src="./img/intro.jpg" srcset="img/intro@2x.jpg 2x" alt="Производство" width="1494" height="818">
                   </picture>
                   <h3>Производство печатных&nbsp;плат</h3>
                   <div class="services__button"></div>
@@ -125,8 +125,8 @@
               <li class="services__item">
                 <a class="services__link" href="#" tabindex="7">
                   <picture>
-                    <source srcset="img/intro.webp 1x, img/intro@2x.webp 2x" type="image/webp">
-                    <img src="img/intro.jpg" srcset="img/intro@2x.jpg 2x" alt="Монтаж" width="1494" height="818">
+                    <source srcset="./img/intro.webp 1x, ./img/intro@2x.webp 2x" type="image/webp">
+                    <img src="./img/intro.jpg" srcset="./img/intro@2x.jpg 2x" alt="Монтаж" width="1494" height="818">
                   </picture>
                   <h3>Монтаж печатных <br> плат</h3>
                   <div class="services__button"></div>
@@ -135,8 +135,8 @@
               <li class="services__item">
                 <a class="services__link" href="#" tabindex="8">
                   <picture>
-                    <source srcset="img/intro.webp 1x, img/intro@2x.webp 2x" type="image/webp">
-                    <img src="img/intro.jpg" srcset="img/intro@2x.jpg 2x" alt="Комплектующие" width="1494" height="818">
+                    <source srcset="./img/intro.webp 1x, ./img/intro@2x.webp 2x" type="image/webp">
+                    <img src="./img/intro.jpg" srcset="./img/intro@2x.jpg 2x" alt="Комплектующие" width="1494" height="818">
                   </picture>
                   <h3>Комплектующие для&nbsp;светотехники</h3>
                   <div class="services__button"></div>
@@ -148,18 +148,18 @@
         <section class="feedback" id="feedback">
           <div class="feedback__wrapper container">
             <h2 class="visually-hidden">Форма обратной связи</h2>
-            <div class="form">
+            <div class="form" data-form>
               <h2>Остались вопросы? Задайте их&nbsp;нам!</h2>
               <p>Мы&nbsp;проконсультируем Вас бесплатно</p>
-              <form action="https://echo.htmlacademy.ru/" method="post">
+              <form action="https://echo.htmlacademy.ru" method="post" autocomplete="off">
                 <div class="form__header">
                   <label class="visually-hidden" for="name">Имя</label>
-                  <input type="text" id="name" placeholder="Имя" required tabindex="9">
+                  <input type="text" id="name" name="modal-name" placeholder="Имя" pattern="^[A-Za-zА-Яа-яЁё].*" title="Первый символ - буква" required tabindex="9">
                   <label class="visually-hidden" for="phone">Телефон</label>
-                  <input type="tel" id="phone" placeholder="Телефон" data-phone-input required tabindex="10">
+                  <input type="tel" id="phone" name="modal-phone" placeholder="Телефон" pattern="\+7\s?[\(]{0,1}[0-9]{3}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" title="+7(xxx) xxx-xx-xx" data-phone-input required tabindex="10">
                 </div>
                 <label class="visually-hidden" for="question">Ваш вопрос</label>
-                <textarea id="question" placeholder="Ваш вопрос" tabindex="11"></textarea>
+                <textarea id="question" placeholder="Ваш вопрос" name="modal-text" tabindex="11"></textarea>
                 <div class="form__footer">
                   <button class="form__button button" type="submit" tabindex="13">Задать вопрос</button>
                   <label>
@@ -176,32 +176,32 @@
       <footer class="main-footer">
         <div class="main-footer__wrapper container">
           <div class="main-footer__inner">
-            <div class="main-footer__logo logo">
-              <a class="logo__link">
-                <svg class="logo__desktop" width="215" height="55" aria-label="Логотип.">
-                  <use xlink:href="/img/sprite_auto.svg#logo-desktop"></use>
+            <div class="main-footer__logo">
+              <a>
+                <svg width="215" height="55" aria-label="Логотип.">
+                  <use xlink:href="./img/sprite_auto.svg#logo-desktop"></use>
                 </svg>
               </a>
             </div>
             <div class="main-footer__socials">
               <ul class="main-footer__socials-list">
                 <li class="main-footer__socials-item">
-                  <a href="#" aria-label="OK.">
+                  <a href="#" aria-label="OK." tabindex="13">
                     <svg width="30" height="30">
                       <use xlink:href="./img/sprite_auto.svg#ok"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="main-footer__socials-item">
-                  <a href="#" aria-label="VK.">
+                  <a href="#" aria-label="VK." tabindex="14">
                     <svg width="30" height="30">
                       <use xlink:href="./img/sprite_auto.svg#vk"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="main-footer__socials-item">
-                  <a href="#" aria-label="Pinterest.">
-                    <svg width="30" height="30" fill="#041827">
+                  <a href="#" aria-label="Pinterest." tabindex="15">
+                    <svg width="30" height="30">
                       <use xlink:href="/img/sprite_auto.svg#pinterest"></use>
                     </svg>
                   </a>
@@ -210,49 +210,49 @@
             </div>
           </div>
           <div class="main-footer__accordion accordion">
-            <button class="accordion__button accordion__button--nojs" type="button" data-accordion-button>Разделы сайта</button>
+            <button class="accordion__button accordion__button--nojs" type="button" data-accordion-button tabindex="16">Разделы сайта</button>
             <div class="accordion__item accordion__item--nav" data-accordion-item>
               <ul class="main-footer__nav-list">
                 <li class="main-footer__nav-item">
-                  <a href="#">О Компании</a>
+                  <a href="#" tabindex="17">О Компании</a>
                 </li>
                 <li class="main-footer__nav-item">
-                  <a href="#">Продукты</a>
+                  <a href="#" tabindex="18">Продукты</a>
                 </li>
                 <li class="main-footer__nav-item">
-                  <a href="#">Производство печатных плат</a>
+                  <a href="#" tabindex="19">Производство печатных плат</a>
                 </li>
                 <li class="main-footer__nav-item">
-                  <a href="#">Монтаж печатных плат</a>
+                  <a href="#" tabindex="20">Монтаж печатных плат</a>
                 </li>
               </ul>
               <ul class="main-footer__nav-list main-footer__nav-list--second">
                 <li class="main-footer__nav-item">
-                  <a href="#">Комплектующие</a>
+                  <a href="#" tabindex="21">Комплектующие</a>
                 </li>
                 <li class="main-footer__nav-item">
-                  <a href="#">Доставка</a>
+                  <a href="#" tabindex="22">Доставка</a>
                 </li>
                 <li class="main-footer__nav-item">
-                  <a href="#">Контакты</a>
+                  <a href="#" tabindex="23">Контакты</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="main-footer__accordion main-footer__accordion--second accordion">
-            <button class="accordion__button accordion__button--nojs" type="button" data-accordion-button>Наш офис</button>
+            <button class="accordion__button accordion__button--nojs" type="button" data-accordion-button tabindex="24">Наш офис</button>
             <div class="accordion__item accordion__item--contacts" data-accordion-item>
               <div class="main-footer__contacts">
                 <p>г. Мытищи, Олимпийский проспект, д.10</p>
                 <ul class="main-footer__contacts-phone">
                   <li class="main-footer__contacts-item">
-                    <a href="tel:+74955894050">+7 (495) 589-40-50</a>
+                    <a href="tel:+74955894050" tabindex="25">+7 (495) 589-40-50</a>
                   </li>
                   <li class="main-footer__contacts-item">
-                    <a href="tel:+79253895829">+7 (925) 389-58-29</a>
+                    <a href="tel:+79253895829" tabindex="26">+7 (925) 389-58-29</a>
                   </li>
                   <li class="main-footer__contacts-item">
-                    <a href="tel:+79253647813">+7 (925) 364-78-13</a>
+                    <a href="tel:+79253647813" tabindex="27">+7 (925) 364-78-13</a>
                   </li>
                 </ul>
               </div>
@@ -272,14 +272,14 @@
           </button>
           <h2>Закажите звонок</h2>
           <p>Оставьте контакты, мы&nbsp;проконсультируем вас&nbsp;бесплатно в&nbsp;удобное время</p>
-          <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
+          <form class="modal__form" action="https://echo.htmlacademy.ru" method="post" autocomplete="off">
             <div class="modal__form-header">
               <label class="visually-hidden" for="name">Имя</label>
-              <input type="text" id="modal-name" name="modal-name" minlength="1" maxlength="20" data-name-input placeholder="Имя" required>
+              <input type="text" id="modal-name" name="modal-name" pattern="^[A-Za-zА-Яа-яЁё].*" title="Первый символ - буква" minlength="1" maxlength="20" data-name-input placeholder="Имя" required>
               <label class="visually-hidden" for="phone">Телефон</label>
-              <input type="tel" id="modal-phone" data-phone-input pattern="\+7\(\d{3}\)\d{7}" placeholder="Телефон" required>
+              <input type="tel" id="modal-phone" name="modal-phone" pattern="\+7\s?[\(]{0,1}[0-9]{3}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" title="+7(xxx) xxx-xx-xx" data-phone-input placeholder="Телефон" required>
               <label class="visually-hidden" for="question-modal">Ваш вопрос</label>
-              <textarea id="question-modal" placeholder="Ваш вопрос" cols="30" rows="6"></textarea>
+              <textarea id="question-modal" placeholder="Ваш вопрос" name="modal-text" cols="30" rows="6"></textarea>
             </div>
             <div class="modal__form-footer">
               <button class="modal__form-button button" type="submit">Отправить</button>
